# dispair

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  README.md  docrunner.toml  index.html  pyproject.toml  setup.cfg  setup.py  sitemap.xml  tox.ini
.github/workflows/: documentation.yml  github-pages.yml  python-package.yml
assets/js/: 17896441.68b75d24.js  1be78505.fea86f35.js  1df93b7f.1ebd8ff6.js  1f391b9e.619c5191.js  393be207.351ae3dd.js  935f2afb.0a59cc2f.js  935f2afb.c01004bb.js  common.c5fdee8b.js  d589d3a7.35101e24.js  d589d3a7.5231beed.js  d589d3a7.6b2ef2c0.js  d589d3a7.91cc6410.js  main.733e151b.js  main.81c6850b.js  main.9d05c4bc.js  main.a64e0beb.js  runtime~main.271ce7b7.js  runtime~main.4190e32f.js  runtime~main.5123915a.js  runtime~main.7ca1a28e.js
blog/: atom.xml  rss.xml
dispair/: __init__.py  client.py  colour.py  gateway_client.py  http_session.py  missing_handler.py  router.py  webhook_client.py
dispair/constants/: __init__.py
dispair/exceptions/: __init__.py
dispair/http/: __init__.py  http_session.py
dispair/models/: __init__.py  colour.py  embed.py  handler.py  interaction.py  member.py  option.py  response.py
dispair/utils/: __init__.py  colour.py  embed.py
docs/: CNAME  docusaurus.config.js  sidebars.js
docs/docs/: getting-started.md
docs/getting-started/: index.html
docs/pages/: getting-started.md
example/: __main__.py  main.py  requirements.txt
example/gateway/: .env.example  __main__.py
example/handlers/: fun.py
example/webhook/: .env.example  __main__.py
markdown-page/: index.html
src/dispair/: __init__.py  client.py  router.py
src/dispair/models/: embed.py  interaction.py  option.py  response.py
tests/: test_client.py  test_dispair.py  test_embed.py  test_utils.py
tests/stubs/: client_stub.py  request_stub.py  verifykey_stub.py
website/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
website/docs/: getting-started.md
website/src/components/: HomepageFeatures.tsx
website/src/pages/: index.js
