[tool.poetry]
name = "dispair"
version = "0.0.1"
description = "Webhook handler for Discord Interactions"
authors = ["GDWR <gregory.dwr@gmail.com>"]
homepage = "https://github.com/GDWR/Dispair"
repository = "https://github.com/GDWR/Dispair"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.9"
PyNaCl = "^1.4.0"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/GDWR/Dispair/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
