[metadata]
# replace with your username:
name = dispair
version = 0.0.1
author = GDWR
author_email = gregory.dwr@gmail.com
description = Webhook handler for Discord Interactions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GDWR/dispair
project_urls =
    Bug Tracker = https://github.com/GDWR/dispair/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src

